# Automate

./: Automate.c  Automate.h  AutomateAnalysis.c  AutomateAnalysis.h  AutomateCore.c  AutomateCore.h  AutomateIO.c  AutomateIO.h  AutomateTransform.c  AutomateTransform.h  CMakeLists.txt  README.md  README_EN.md  README_FR.md  main.c
Automates/: #2.txt  AutomatePerso.txt  test.txt
